try to prevent horizontal scrolling on mobile

--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -3,6 +3,7 @@ body.app {
   height: 100%;
 }
 
+html.app,
 body.app {
   overflow: hidden;
 }
